# term-image

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  check  cli.py  data.json  default_config.json  image.py  main.py  pyproject.toml  requirements.txt  setup.py  vim-style_config.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  critical-bug.md  critical_bug.md  feature_suggestion.md
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  coverage_comment.yml  format_check.yml  lint.yml  python-package.yml  python-publish.yml  test.yml  type_check.yml
app/: index.ts  package-lock.json  package.json
app/auth/: auth.ts  user.interface.ts
docs/: requirements.txt
docs/source/: concepts.rst  conf.py  faqs.rst  gallery.rst  glossary.rst  index.rst  installation.rst  issues.rst  planned.rst
docs/source/api/: color.rst  geometry.rst  image.rst  index.rst  padding.rst  render.rst  renderable.rst  terminal.rst  toplevel.rst
docs/source/guide/: concepts.rst  formatting.rst  index.rst  tutorial.rst
docs/source/quickstart/: index.rst  installation.rst  tutorial.rst
docs/source/reference/: exceptions.rst  image.rst  index.rst  toplevel.rst  utils.rst  widget.rst
docs/source/start/: installation.rst  tutorial.rst
docs/source/viewer/: config.rst  index.rst  tui.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1bf2fcfd341fcdfd__iterator_py.html  z_b8624211712e561f___init___py.html  z_b8624211712e561f_block_py.html  z_b8624211712e561f_common_py.html  z_b8624211712e561f_iterm2_py.html  z_b8624211712e561f_kitty_py.html  z_b9ffcb677bff1953___init___py.html  z_b9ffcb677bff1953__ctlseqs_py.html  z_b9ffcb677bff1953_color_py.html  z_b9ffcb677bff1953_utils_py.html  z_db082e6105874bf7__renderable_py.html  z_db082e6105874bf7__types_py.html  z_e820c6e7b639c181___init___py.html  z_e820c6e7b639c181__urwid_py.html
source/: conf.py  index.rst
source/viewer/: config.rst  index.rst  tui.rst
src/term_image/: __init__.py  __main__.py  _ctlseqs.py  _utils.py  cli.py  color.py  config.py  ctlseqs.py  exceptions.py  exit_codes.py  geometry.py  logging.py  logging_multi.py  notify.py  padding.py  parsers.py  terminal.py  utils.py
src/term_image/image/: __init__.py  block.py  common.py  iterm2.py  kitty.py
src/term_image/render/: __init__.py  _iterator.py
src/term_image/renderable/: __init__.py  _enum.py  _exceptions.py  _renderable.py  _types.py
src/term_image/terminal/: __init__.py
src/term_image/tui/: __init__.py  keys.py  main.py  render.py  widgets.py
src/term_image/widget/: __init__.py  _urwid.py  urwid.py
src/term_img/: __init__.py
term_image/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  exit_codes.py  image.py  logging.py  logging_multi.py  notify.py  parsers.py  utils.py
term_image/image/: __init__.py  block.py  common.py  iterm2.py  kitty.py  term.py  utils.py
term_image/tui/: __init__.py  keys.py  main.py  render.py  widgets.py
term_img/: __init__.py  __main__.py  cli.py  config.py  errors.py  exceptions.py  exit_codes.py  image.py  logging.py  logging_multi.py  notify.py
term_img/tui/: __init__.py  config.py  keys.py  main.py  render.py  widgets.py
tests/: __init__.py  common.py  test_base.py  test_block.py  test_color.py  test_geometry.py  test_image.py  test_image_iterator.py  test_iterator.py  test_iterm2.py  test_kitty.py  test_others.py  test_padding.py  test_term.py  test_top_level.py  test_url.py
tests/render/: test_iterator.py
tests/renderable/: test_renderable.py  test_types.py
tests/test_image/: common.py  test_base.py  test_block.py  test_iterm2.py  test_kitty.py  test_others.py  test_url.py
tests/test_widget/: test_urwid.py
tests/widget/urwid/: test_main.py  test_screen.py
