[build-system]
# See:
# - https://setuptools.pypa.io/en/latest/history.html#v66-1-0
# - https://github.com/pypa/setuptools/issues/3779
requires = ["setuptools >= 66.1"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "term-image"
description = "Display images in the terminal"
requires-python = ">=3.8"
dependencies = [
    "pillow>=9.1,<11",
    "requests>=2.23,<3",
    "typing_extensions>=4.8,<5",
]
authors = [
    {name = "Toluwaleke Ogundipe", email = "anonymoux47@gmail.com"},
]
license = {text = "MIT License"}
readme = "README.md"
keywords = [
    "image",
    "terminal",
    "viewer",
    "PIL",
    "Pillow",
    "console",
    "xterm",
    "library",
    "cli",
    "tui",
    "ANSI",
    "ASCII-Art",
    "kitty",
    "iterm2",
    "sixel",
    "graphics",
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Multimedia :: Graphics :: Viewers",
]

[project.optional-dependencies]
urwid = ["urwid>=2.1,<3.0"]

[project.urls]
Homepage = "https://github.com/AnonymouX47/term-image"
Documentation = "https://term-image.readthedocs.io/"
Source = "https://github.com/AnonymouX47/term-image"
Repository = "https://github.com/AnonymouX47/term-image.git"
Issues = "https://github.com/AnonymouX47/term-image/issues"
Changelog = "https://github.com/AnonymouX47/term-image/blob/main/CHANGELOG.md"
Funding = "https://github.com/AnonymouX47/term-image#sponsor-this-project"

[tool.coverage.run]
branch = true
source = ["src"]
# For https://github.com/py-cov-action/python-coverage-comment-action
relative_files = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
skip_covered = true
sort = "-cover"

[tool.isort]
py_version = "auto"
profile = "black"
combine_as_imports = true

[tool.mypy]
strict = true
show_column_numbers = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    'term_image.renderable.*',
    'term_image.render.*',
    'term_image.image.*',
]
disable_error_code = ["type-abstract"]

# These modules will go through massive changes real soon
[[tool.mypy.overrides]]
module = [
    'term_image.image.*',
    'term_image.widget.*',
]
ignore_errors = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::term_image.utils.NoActiveTerminalWarning:",
]

[tool.setuptools.dynamic]
version = {attr = "term_image.version_info"}
